run ant fixcrlf to convert all tabs to spaces and normalize eol.